[OrgLimits] Add spec (#2197)
* update spec

* lint

* move endpoint

* lint

* fix docs

* generateˆ

* Potential fix for pull request finding


* add withOrganization guard

---------
